--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "nodemon": "^2.0.21",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "nodemon": "^2.0.21"
   }
 }
